--- a/package.json
+++ b/package.json
@@ -6,16 +6,27 @@
   "repository": "git@github.com:HeiLiu/start-NextJs.git",
   "author": "heiliu <969403750@qq.com>",
   "license": "MIT",
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    }
+  },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "antd": "^3.21.4",
+    "babel-plugin-import": "^1.12.0",
     "next": "^9.0.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
+  "devDependencies": {
+    "commitizen": "^4.0.3",
+    "cz-conventional-changelog": "^3.0.2"
+  },
   "scripts": {
     "dev": "next -p 3006",
-    "commit": "npx git-cz"
-  },
-  "devDependencies": {
-    "commitizen": "^4.0.3"
+    "build": "next build",
+    "start": "next start",
+    "commit": "git-cz"
   }
 }
